--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<body background="https://st2.depositphotos.com/1915497/10879/i/950/depositphotos_108798802-stock-photo-purple-dots-pattern.jpg">
 <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/1/1c/Avengers_endgame_2019_avengers_logo_png_by_mintmovi3_dd4bz30-pre.png" type="image/png">
 <title> samantha bedoya </title>
 </head>
