--- a/index.html
+++ b/index.html
@@ -55,24 +55,39 @@ aqui puedes conocer un poco mas sobre mis compañeros de equipo.
 <tr>
 <th>N°</th>
 <th>Nombre</th>
-<th>Pagina web</th>
+<th>FACEBOOK</th>
 </tr>
 <tr>
 <td>1</td>
-<td>nombre 1</td>
-<td>1 web</td>
+<td>Ernesto Acasiete</td>
+<td><a href="https://www.facebook.com/ernesto.acasiete.7">ERNESTO</a></td>
 </tr>
 <tr>
 <td>2</td>
-<td>nombre 2</td>
-<td>2 web</td>
+<td>Joaquín Cusicanqui</td>
+<td><a href="https://www.facebook.com/profile.php?id=100010836373299">JOAQUÍN</a></td>
 </tr>
 <tr>
 <td>3</td>
-<td>nombre 3</td>
-<td>3 web</td>
+<td>Rafael Carbajal</td>
+<td><a href="https://www.facebook.com/rafael.carbajal.547">RAFAEL</a></td>
+</tr>
+<tr>
+<td>4</td>
+<td>Ximena Berdiales</td>
+<td><a href="https://www.facebook.com/ximena.berdialesescobar.129?epa=SEARCH_BOX">XIMENA</a></td>
+</tr>
+<tr>
+<td>5</td>
+<td>Yasmín Ccoyllo</td>
+<td><a href="https://www.facebook.com/yasmin.ccoyllo.veneros77">YASMÍN</a></td>
 </tr>
 </table>
+<tr>
+<td>6</td>
+<td>Jesús Puente</td>
+<td><a href="https://www.facebook.com/alex.puente1309?epa=SEARCH_BOX">JESÚS</a></td>
+</tr>
 
 </body>
 </html>
